--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "mocha test --timeout 20000"
+    "test": "mocha test --timeout 20000",
+    "start": "node D:/New/Automation-SOLX-/tbk-test/callTest.spec.js"
   },
   "author": "",
   "license": "ISC",
@@ -13,6 +14,7 @@
     "dotenv": "^16.4.5",
     "mocha": "^10.4.0",
     "ms": "^2.1.3",
+    "pocketbase": "^0.21.5",
     "selenium-webdriver": "^4.21.0"
   }
 }
